# korchamhrd_ai_chip_design

./: .gitignore  LICENSE  README.en.md  README.md  build_windows_exe.bat  clear_spreadsheet.py  pyproject.toml  requirements.txt  run.sh  setup.sh
classroom/: README.en.md  README.md
classroom/deliverable-share/: .gitignore  README.en.md  README.md  classroom_deliverable_share.py  pyproject.toml  requirements.txt  run.sh  setup.sh
classroom/deliverable-share/examples/: config.sample.json
classroom/deliverable-share/tests/: test_comment_rules.py  test_name_normalization.py
clear-spreadsheet/: build_windows_exe.bat  clear_spreadsheet_gui.py  hook-tkinterdnd2.py  requirements-build.txt
mini_project-RV32I/: tb_rv32i_behav.wcfg  tb_rv32i_type_all_coverage_behav.wcfg
mini_project-UVM_SPI_I2C/: Makefile  SPI_I2C_UVM.xpr  filelist.f  tb_I2C_behav.wcfg  tb_SPI_behav.wcfg
note/: 260406-260529-복습노트-01-설계흐름.md  260406-260529-복습노트-02-wire-reg-4state.md  260406-260529-복습노트-03-basys3-xdc-constraints.md  260406-260529-복습노트-04-systemverilog-검증-접근법.md  260406-logic-gate와-첫-시뮬레이션.md  260407-adder와-첫-fnd-표시.md  260408-8bit-adder와-fnd-controller.md  260409-합성-구조-확장-fnd-시스템.md  260410-control-unit-datapath-timing.md  260413-반복문-이벤트제어-tb-rtl.md  260414-fsm-moore-mealy-버튼입력.md  260414-프로젝트-설명.md  260415-ila와-시뮬레이션.md  260421-uart-tx-fsm.md  260422-uart-tx-rx.md  260428-uart-button-tx.md  260429-shift-register-rx-fifo.md  260430-fifo-sensor-interface.md  260507-systemverilog-검증입문.md  260508-systemverilog-검증심화.md  260511-join.md  260512-systemverilog-fifo-검증.md  260601-uvm-ot.md  (+37 more)
(+416 files in other folders)
