[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom-deliverable-share"
version = "0.1.0"
description = "Validate locally synced Google Classroom deliverables, share folders on Drive, and generate private-comment copybooks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-api-python-client>=2.169.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.0",
  "openpyxl>=3.1.5",
]

[project.scripts]
classroom-deliverable-share = "classroom_deliverable_share:main"

[tool.setuptools]
py-modules = ["classroom_deliverable_share"]
